<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_bow" />

        <View
            android:id="@+id/mask_right"
            android:layout_width="35dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_marginTop="-13dp"
            android:background="@android:color/white" />

        <View
            android:id="@+id/mask_left"
            android:layout_width="21dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="-3dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_circle" />

        <net.corpy.loginlocation.dialogLib.SuccessTickView
            android:id="@+id/success_tick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/report_has_created_n_successfully"
        android:textColor="#575757"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="14sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_marginEnd="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/close"
            android:visibility="visible" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:text="@string/download" />
    </LinearLayout>
</LinearLayout>